--- a/style.css
+++ b/style.css
@@ -1,54 +1,46 @@
-* {
+*,
+*:before,
+*:after{
+    padding: 0;
     margin: 0;
-    padding: 0%;
+    box-sizing: border-box;
 }
-
-.container {
-    width: 100%;
+body{
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f3fbff;
+    display: grid;
+    place-items: center;
 }
-
-.img-box {
-    width: 60%;
-    margin: auto;
-    line-height: 0;
-    background-image: url('images/background.png');
-    overflow: hidden;
+.container{
+    height: 67.5vmin;
+    width: 95vmin;
     position: relative;
-}
-
-.img-wrap {
-    width: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
     overflow: hidden;
 }
-
-span {
-    width: 1px;
+img{
+    width: 100%;
     height: 100%;
-    cursor: ew-resize;
-    background: #fff;
     position: absolute;
-    left: 20px;
-    left: 0;
-    top: 0;
 }
-
-.arrow {
-    width: 40px;
-    position: absolute;
-    top: 50%;
+#my-img{
+    clip-path: polygon(0 0 , 50% 0, 50% 100%, 0 100%);
+}
+#slider{
+    position: relative;
+    -webkit-appearance: none;
+    width: calc( 100% + 40px);
+    height: 100%;
     margin-left: -20px;
-    margin-top: -20px;
-
+    background-color: transparent;
+    outline: none;
 }
-
-
-
-
+#slider::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    height: 40px;
+    width: 40px;
+    background: url("slider-icon.svg"),
+    rgba(255,255,255,0.3);
+    border: 3px solid #ffffff;
+    border-radius: 50%;
+    background-size: contain;
+    cursor: pointer;
+}
